# LangGraph-multi-agents-demo

./: .gitignore  LICENSE  readme.md  requirements.txt  tools_reference_card.html
Docs/: AgentsTS.md  pythonBeginner.md  tsBeginner.md
customer-agent-client/src/lib/langGraph/: actions.ts  types.ts  useLangGraphAgent.tsx
mas-py-server/: pyproject.toml  readme.md  server.py
mas-py-server/app/: graph.py
mas-research/: components.json  package.json  pnpm-lock.yaml
mas-research/src/app/: globals.css  layout.tsx  page.tsx
mas-research/src/components/ai/: AgentTypes.ts  ApprovalCard.tsx  ChatbotNode.tsx  ResearchAgentNode.tsx
mas-research/src/components/ui/: combobox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  menubar.tsx  select.tsx  sidebar.tsx
mas-research/src/store/: ChatStore.tsx
multi-research-client/src/app/: page.tsx
multi-research-client/src/lib/langGraph/: api.ts  useLangGraphAgent.tsx
my-agent-py/: 01_models.py  02_prompts.py  03_chains.py  04_tools.py  05_agents.py  07_demo-agent.py  memO-agent.py  multi-agent-01.py  test-agent.py  test-setup.py
my-agent-ts/: package-lock.json  package.json  tsconfig.json
my-agent-ts/src/: 01_chains.ts  deep-agents_01.ts  multi-agent_01.ts  pm-agent_02.ts
my-app/: components.json  package.json  pnpm-lock.yaml
my-app-py-server/: Readme.md  pyproject.toml  server.py
my-app-py-server/app/: fake_db.py  graph.py  utils.py
my-app/src/app/: globals.css  layout.tsx  page.tsx
my-app/src/components/ai/: AgentTypes.ts  ApprovalCard.tsx  ChatbotNode.tsx  OrderAgentNode.tsx
(+8 files in other folders)
