[project]
name = "py-venv"
version = "0.1.0"
description = ""
authors = [
    {name = "ronitrai27",email = "ronitrai1237@gmail.com"}
]
requires-python = ">=3.12,<4.0"
readme = "README.md"
packages = [
    { include = "app" },
]

dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
    "sse-starlette (>=3.3.4,<4.0.0)",
    "langgraph (>=1.1.6,<2.0.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "langchain-core (>=1.2.28,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
